mds: stuck in resolve when restarting MDS and reducing max_mds

Fixes: https://tracker.ceph.com/issues/47843
Signed-off-by: chencan <chen.can2@zte.com.cn>